[package]
name = "stellarlend-lending"
version = "0.1.0"
edition = "2021"


[lib]
name = "stellarlend_lending"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
stellar-lend-common = { path = "../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = { workspace = true }

# Re-export modules for integration tests
[features]
testutils = ["soroban-sdk/testutils"]
